# tibiarc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  analyze.sh  emscriptenplayer.c  format.sh  vcpkg.json  wasm.py
collator/: collator.cpp
converter/: converter.c  converter.cpp  encoding.c  encoding.cpp  encoding.h  encoding.hpp  exporter.c  exporter.cpp  exporter.h  exporter.hpp  memoryfile.c  memoryfile.h
converter/encoders/: inert.c  inert.cpp  inert.hpp  libav.c  libav.cpp  libav.hpp  sdl2.c
emscripten-player/: emscriptenplayer.c  index.html  playback.c  playback.h  rendering.c  rendering.h
gui/: collection.cpp  collection.hpp  database.cpp  database.hpp  main.cpp  mediacontrols.cpp  mediacontrols.hpp  player.cpp  player.hpp  window.cpp  window.hpp
lib/: canvas.c  canvas.cpp  canvas.h  canvas.hpp  characterset.cpp  characterset.h  characterset.hpp  container.c  container.h  container.hpp  creature.c  creature.h  creature.hpp  crypto.cpp  crypto.hpp  datareader.c  datareader.h  datareader.hpp  demuxer.c  demuxer.h  demuxer.hpp  effect.h  effect.hpp  events.cpp  events.hpp  fonts.c  fonts.cpp  fonts.h  fonts.hpp  gamestate.c  gamestate.cpp  gamestate.h  gamestate.hpp  icons.c  icons.cpp  icons.h  icons.hpp  map.h  map.hpp  message.c  (+57 more)
lib/formats/: cam.c  cam.cpp  rec.c  rec.cpp  tibiacast.c  tibiacast.cpp  tibiareplay.c  tibiareplay.cpp  tmv1.c  tmv1.cpp  tmv2.c  tmv2.cpp  ttm.c  ttm.cpp  yatc.c  yatc.cpp
miner/: miner.cpp  serializer.cpp  serializer.hpp
player/: index.html  playback.c  playback.cpp  playback.h  playback.hpp  player.c  player.cpp  rendering.c  rendering.cpp  rendering.h  rendering.hpp
tests/: .gitignore  CTestConfig.cmake  LICENSES.md  Makefile
tests/8.40/: .gitignore
tests/8.50/: .gitignore
tests/render/: .gitignore  screenshot_0.bmp.checksum  screenshot_0.bmp.sha256sum  screenshot_1.bmp.checksum  screenshot_1.bmp.sha256sum
utils/: cli.hpp  collation.cpp  collation.hpp  memoryfile.cpp  memoryfile.hpp
